- Added "base_detail" template. - Added "documents/document_detail" template. - Fixed several templates.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@816 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/hr/expensevoucher_detail.html
+++ b/themes/default/templates/hr/expensevoucher_detail.html
@@ -1,8 +1,7 @@
-{% extends "base.html" %}
+{% extends "documents/document_detail.html" %}
 
 {% load i18n %}
 {% load breadcrumbs %}
-{% load navigator %}
 {% load details %}
 {% load menu %}
 
@@ -10,12 +9,6 @@
     {% add_crumb 'Home' '/' %}
     {% add_crumb 'Expense vouchers' 'expensevoucher_list' %}
     {% add_crumb object %}
-{% endblock %}
-
-{% block title %}
-<div class="title">
-    <h1>{{ object }}</h1>
-</div>
 {% endblock %}
 
 {% block main %}
