--- a/themes/default/templates/sales/bankaccount_detail.html
+++ b/themes/default/templates/sales/bankaccount_detail.html
@@ -1,13 +1,10 @@
-{% extends "base.html" %}
+{% extends "base_detail.html" %}
 
 {% load i18n %}
 {% load breadcrumbs %}
-{% load navigator %}
 {% load region %}
 {% load menu %}
 {% load details %}
-
-{% block meta_title %}{{ object|striptags|capfirst }}{% endblock %}
 
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
@@ -15,31 +12,22 @@
     {% add_crumb object %}
 {% endblock %}
 
-{% block title %}
-<div class="title">
-    <h1>{{ object|escape|capfirst }}</h1>
-    <h2>{% block subtitle %}{% trans "Details" %}{% endblock %}</h2>
-</div>
+{% block objectactions %}
+{% if perms.sales.add_bankaccount %}
+<li class="add"><a title="{% trans 'Add' %}" href="{% url bankaccount_add %}">{% trans 'Add' %}</a></li>
+{% endif %}
+{% if perms.sales.change_bankaccount %}
+<li class="edit"><a title="{% trans 'Edit' %}" href="{% url bankaccount_edit object.pk %}">{% trans 'Edit' %}</a></li>
+{% endif %}
+{% if perms.sales.delete_bankaccount %}
+<li class="delete"><a title="{% trans 'Delete' %}" href="{% url bankaccount_delete object.pk %}">{% trans 'Delete' %}</a></li>
+{% endif %}
+{% if perms.sales.change_bankaccount %}
+<li class="all"><a title="{% trans 'All' %}" href="{% url bankaccount_list %}">{% trans 'All' %}</a></li>
+{% endif %}
 {% endblock %}
 
-{% block main %}
-<div class="actions">
-    <ul>
-        {% if perms.sales.add_bankaccount %}
-        <li class="add"><a title="{% trans 'Add' %}" href="{% url bankaccount_add %}">{% trans 'Add' %}</a></li>
-        {% endif %}
-        {% if perms.sales.change_bankaccount %}
-        <li class="edit"><a title="{% trans 'Edit' %}" href="{% url bankaccount_edit object.pk %}">{% trans 'Edit' %}</a></li>
-        {% endif %}
-        {% if perms.sales.delete_bankaccount %}
-        <li class="delete"><a title="{% trans 'Delete' %}" href="{% url bankaccount_delete object.pk %}">{% trans 'Delete' %}</a></li>
-        {% endif %}
-        {% if perms.sales.change_bankaccount %}
-        <li class="all"><a title="{% trans 'All' %}" href="{% url bankaccount_list %}">{% trans 'All' %}</a></li>
-        {% endif %}
-    </ul>
-</div>
-{% include 'elements/navigator.html' %}
+{% block sections %}
 <div class="details">
     <table class="properties">
         {% property_table object "[['bank_name', 'bic'], ['owner', 'iban']]" %}
