--- a/themes/default/templates/calendar/event_detail.html
+++ b/themes/default/templates/calendar/event_detail.html
@@ -1,13 +1,10 @@
-{% extends "base.html" %}
+{% extends "base_detail.html" %}
 
 {% load i18n %}
 {% load breadcrumbs %}
-{% load navigator %}
 {% load region %}
 {% load menu %}
 {% load details %}
-
-{% block meta_title %}{{ object.title|striptags|capfirst }}{% endblock %}
 
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
@@ -15,60 +12,41 @@
     {% add_crumb object %}
 {% endblock %}
 
-{% block title %}
-<div class="title">
-    <h1>{{ object.title|escape|capfirst }}</h1>
-    <h2>{% block subtitle %}{% trans "Details" %}{% endblock %}</h2>
-</div>
+{% block objectactions %}
+{% if perms.events.add_event %}
+<li class="add"><a title="{% trans 'Add' %}" href="{% url event_add %}">{% trans 'Add' %}</a></li>
+{% endif %}
+{% if perms.events.change_event %}
+<li class="edit"><a title="{% trans 'Edit' %}" href="{% url event_edit object.pk %}">{% trans 'Edit' %}</a></li>
+{% endif %}
+{% if perms.events.delete_event %}
+<li class="delete"><a title="{% trans 'Delete' %}" href="{% url event_delete object.pk %}">{% trans 'Delete' %}</a></li>
+{% endif %}
+{% if perms.events.change_event %}
+<li class="all"><a title="{% trans 'All' %}" href="{% url event_list %}">{% trans 'All' %}</a></li>
+{% endif %}
+{% if perms.events.add_event %}
+<li class="import"><a title="{% trans 'Import events from an .ics file' %}" href="{% url event_import %}">{% trans 'Import' %}</a></li>
+{% endif %}
+{% if perms.events.change_event %}
+<li class="export"><a title="{% trans 'Export event to an .ics file' %}" href="{% url event_export object.pk %}">{% trans 'Export' %}</a></li>
+{% endif %}
+{% if perms.events.change_event %}
+{% if user not in object.stream.followers.all %}
+<li class="follow"><a title="{% trans 'Follow' %}" href="{% url stream_follow object.stream request.path %}">{% trans 'Follow' %}</a></li>
+{% else %}
+<li class="leave"><a title="{% trans 'Leave' %}" href="{% url stream_leave object.stream request.path %}">{% trans 'Leave' %}</a></li>
+{% endif %}
+{% endif %}
 {% endblock %}
 
-{% block main %}
-<div class="actions">
-    <ul>
-        {% if perms.events.add_event %}
-        <li class="add"><a title="{% trans 'Add' %}" href="{% url event_add %}">{% trans 'Add' %}</a></li>
-        {% endif %}
-        {% if perms.events.change_event %}
-        <li class="edit"><a title="{% trans 'Edit' %}" href="{% url event_edit object.pk %}">{% trans 'Edit' %}</a></li>
-        {% endif %}
-        {% if perms.events.delete_event %}
-        <li class="delete"><a title="{% trans 'Delete' %}" href="{% url event_delete object.pk %}">{% trans 'Delete' %}</a></li>
-        {% endif %}
-        {% if perms.events.change_event %}
-        <li class="all"><a title="{% trans 'All' %}" href="{% url event_list %}">{% trans 'All' %}</a></li>
-        {% endif %}
-        {% if perms.events.add_event %}
-        <li class="import"><a title="{% trans 'Import events from an .ics file' %}" href="{% url event_import %}">{% trans 'Import' %}</a></li>
-        {% endif %}
-        {% if perms.events.change_event %}
-        <li class="export"><a title="{% trans 'Export event to an .ics file' %}" href="{% url event_export object.pk %}">{% trans 'Export' %}</a></li>
-        {% endif %}
-        {% if perms.events.change_event %}
-        {% if user not in object.stream.followers.all %}
-        <li class="follow"><a title="{% trans 'Follow' %}" href="{% url stream_follow object.stream request.path %}">{% trans 'Follow' %}</a></li>
-        {% else %}
-        <li class="leave"><a title="{% trans 'Leave' %}" href="{% url stream_leave object.stream request.path %}">{% trans 'Leave' %}</a></li>
-        {% endif %}
-        {% endif %}
-    </ul>
-</div>
-{% objects_from object %}
-{% with objects as object_list %}
-{% include 'elements/navigator.html' %}
-{% endwith %}
-<div class="sections">   
-    <div class="menu">
-        {% menu "event_menu" %}
-    </div>
-    <div class="section">
-        {% block section %}
-        <div class="details">
-            <table class="properties">
-                {% property_table object "[['author', 'created'], ['start', 'end'], 'status', 'location', 'description', 'attendees', 'categories', 'tags']" %}
-            </table>
-            {% include "elements/comments.html" %}
-        </div>
-        {% endblock %}
-    </div>
+{% block objectmenu %}{% menu "event_menu" %}{% endblock %}
+
+{% block section %}
+<div class="details">
+    <table class="properties">
+        {% property_table object "[['author', 'created'], ['start', 'end'], 'status', 'location', 'description', 'attendees', 'categories', 'tags']" %}
+    </table>
+    {% include "elements/comments.html" %}
 </div>
 {% endblock %}
