--- a/themes/default/templates/hr/employee_detail.html
+++ b/themes/default/templates/hr/employee_detail.html
@@ -1,8 +1,7 @@
-{% extends "base.html" %}
+{% extends "base_detail.html" %}
 
 {% load i18n %}
 {% load breadcrumbs %}
-{% load navigator %}
 {% load details %}
 {% load menu %}
 
@@ -12,48 +11,29 @@
     {% add_crumb object %}
 {% endblock %}
 
-{% block title %}
-<div class="title">
-    <h1>{{ object }}</h1>
-    <h2>{% trans "Details" %}</h2>
-</div>
+{% block objectactions %}
+{% if perms.hr.add_employee %}
+<li class="add"><a title="{% trans 'Add' %}" href="{% url employee_add %}">{% trans 'Add' %}</a></li>
+{% endif %}
+{% if perms.hr.change_employee %}
+<li class="edit"><a title="{% trans 'Edit' %}" href="{% url employee_edit object.pk %}">{% trans 'Edit' %}</a></li>
+{% endif %}
+{% if perms.hr.delete_employee %}
+<li class="delete"><a title="{% trans 'Delete' %}" href="{% url employee_delete object.pk %}">{% trans 'Delete' %}</a></li>
+{% endif %}
+{% if perms.hr.change_employee %}
+<li class="all"><a title="{% trans 'All' %}" href="{% url employee_list %}">{% trans 'All' %}</a></li>
+{% endif %}
 {% endblock %}
 
-{% block main %}
-<div class="actions">
-    <ul>
-        {% if perms.hr.add_employee %}
-        <li class="add"><a title="{% trans 'Add' %}" href="{% url employee_add %}">{% trans 'Add' %}</a></li>
-        {% endif %}
-        {% if perms.hr.change_employee %}
-        <li class="edit"><a title="{% trans 'Edit' %}" href="{% url employee_edit object.pk %}">{% trans 'Edit' %}</a></li>
-        {% endif %}
-        {% if perms.hr.delete_employee %}
-        <li class="delete"><a title="{% trans 'Delete' %}" href="{% url employee_delete object.pk %}">{% trans 'Delete' %}</a></li>
-        {% endif %}
-        {% if perms.hr.change_employee %}
-        <li class="all"><a title="{% trans 'All' %}" href="{% url employee_list %}">{% trans 'All' %}</a></li>
-        {% endif %}
-    </ul>
-</div>
-{% objects_from object %}
-{% with objects as object_list %}
-{% include 'elements/navigator.html' %}
-{% endwith %}
-<div class="sections">   
-    <div class="menu">
-        {% menu "employee_menu" %}
-    </div>
-    <div class="section">
-        {% block section %}
-        <div class="details">
-            <table class="properties">
-                {% property_table object.job "[['partner', 'role']]" %}
-                {% property_table object "['type', ['start', 'end']]" %}
-                {% property_table object.job "['notes']" %}
-            </table>
-        </div>
-        {% endblock %}
-    </div>
+{% block objectmenu %}{% menu "employee_menu" %}{% endblock %}
+
+{% block section %}
+<div class="details">
+    <table class="properties">
+        {% property_table object.job "[['partner', 'role']]" %}
+        {% property_table object "['type', ['start', 'end']]" %}
+        {% property_table object.job "['notes']" %}
+    </table>
 </div>
 {% endblock %}
