--- a/themes/default/templates/partners/partner_detail.html
+++ b/themes/default/templates/partners/partner_detail.html
@@ -1,13 +1,10 @@
-{% extends "base.html" %}
+{% extends "base_detail.html" %}
 
 {% load i18n %}
 {% load breadcrumbs %}
-{% load navigator %}
 {% load region %}
 {% load menu %}
 {% load details %}
-
-{% block meta_title %}{{ object|striptags|capfirst }}{% endblock %}
 
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
@@ -15,57 +12,38 @@
     {% add_crumb object %}
 {% endblock %}
 
-{% block title %}
-<div class="title">
-    <h1>{{ object|escape|capfirst }}</h1>
-    <h2>{% block subtitle %}{% trans "Dashboard" %}{% endblock %}</h2>
-</div>
+{% block objectactions %}
+{% if perms.partners.add_partner %}
+<li class="add"><a title="{% trans 'Add' %}" href="{% url partner_add %}">{% trans 'Add' %}</a></li>
+{% endif %}
+{% if perms.partners.change_partner %}
+<li class="edit"><a title="{% trans 'Edit' %}" href="{% url partner_edit object.pk %}">{% trans 'Edit' %}</a></li>
+{% endif %}
+{% if perms.partners.delete_partner %}
+<li class="delete"><a title="{% trans 'Delete' %}" href="{% url partner_delete object.pk %}">{% trans 'Delete' %}</a></li>
+{% endif %}
+{% if perms.partners.change_partner %}
+<li class="all"><a title="{% trans 'All' %}" href="{% url partner_list %}">{% trans 'All' %}</a></li>
+{% endif %}
+{% if perms.partners.change_partner %}
+{% if user not in object.stream.followers.all %}
+<li class="follow"><a title="{% trans 'Follow' %}" href="{% url stream_follow object.stream request.path %}">{% trans 'Follow' %}</a></li>
+{% else %}
+<li class="leave"><a title="{% trans 'Leave' %}" href="{% url stream_leave object.stream request.path %}">{% trans 'Leave' %}</a></li>
+{% endif %}
+{% endif %}
 {% endblock %}
 
-{% block main %}
-<div class="actions">
-    <ul>
-        {% if perms.partners.add_partner %}
-        <li class="add"><a title="{% trans 'Add' %}" href="{% url partner_add %}">{% trans 'Add' %}</a></li>
-        {% endif %}
-        {% if perms.partners.change_partner %}
-        <li class="edit"><a title="{% trans 'Edit' %}" href="{% url partner_edit object.pk %}">{% trans 'Edit' %}</a></li>
-        {% endif %}
-        {% if perms.partners.delete_partner %}
-        <li class="delete"><a title="{% trans 'Delete' %}" href="{% url partner_delete object.pk %}">{% trans 'Delete' %}</a></li>
-        {% endif %}
-        {% if perms.partners.change_partner %}
-        <li class="all"><a title="{% trans 'All' %}" href="{% url partner_list %}">{% trans 'All' %}</a></li>
-        {% endif %}
-        {% if perms.partners.change_partner %}
-        {% if user not in object.stream.followers.all %}
-        <li class="follow"><a title="{% trans 'Follow' %}" href="{% url stream_follow object.stream request.path %}">{% trans 'Follow' %}</a></li>
-        {% else %}
-        <li class="leave"><a title="{% trans 'Leave' %}" href="{% url stream_leave object.stream request.path %}">{% trans 'Leave' %}</a></li>
-        {% endif %}
-        {% endif %}
-    </ul>
+{% block objectmenu %}{% menu "partner_menu" %}{% endblock %}
+
+{% block section %}
+<div class="details">
+    <table class="properties">
+        {% property_table object "['is_managed', ['assignee', 'lead_status'], ['is_customer', 'is_supplier'], ['vat_number', 'ssn'], ['language', 'timezone'], ['url', 'email'], ['main_address', 'main_phone_number'], ['terms_of_payment', 'currency'], 'description', 'categories', 'tags']" %}
+    </table>
 </div>
-{% objects_from object %}
-{% with objects as object_list %}
-{% include 'elements/navigator.html' %}
+{% with dashboard=object.dashboard %}
+{% include "elements/dashboard.html" %}
 {% endwith %}
-<div class="sections">   
-    <div class="menu">
-        {% menu "partner_menu" %}
-    </div>
-    <div class="section">
-        {% block section %}
-        <div class="details">
-            <table class="properties">
-                {% property_table object "['is_managed', ['assignee', 'lead_status'], ['is_customer', 'is_supplier'], ['vat_number', 'ssn'], ['language', 'timezone'], ['url', 'email'], ['main_address', 'main_phone_number'], ['terms_of_payment', 'currency'], 'description', 'categories', 'tags']" %}
-            </table>
-        </div>
-        {% with dashboard=object.dashboard %}
-        {% include "elements/dashboard.html" %}
-        {% endwith %}
-        {% include "elements/comments.html" %}
-        {% endblock %}
-    </div>
-</div>
+{% include "elements/comments.html" %}
 {% endblock %}
