--- a/themes/default/templates/products/product_detail.html
+++ b/themes/default/templates/products/product_detail.html
@@ -1,13 +1,10 @@
-{% extends "base.html" %}
+{% extends "base_detail.html" %}
 
 {% load i18n %}
 {% load breadcrumbs %}
-{% load navigator %}
 {% load region %}
 {% load menu %}
 {% load details %}
-
-{% block meta_title %}{{ object|striptags|capfirst }}{% endblock %}
 
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
@@ -15,57 +12,38 @@
     {% add_crumb object %}
 {% endblock %}
 
-{% block title %}
-<div class="title">
-    <h1>{{ object|escape|capfirst }}</h1>
-    <h2>{% block subtitle %}{% trans "Details" %}{% endblock %}</h2>
-</div>
+{% block objectactions %}
+{% if perms.products.add_product %}
+<li class="add"><a title="{% trans 'Add' %}" href="{% url product_add %}">{% trans 'Add' %}</a></li>
+{% endif %}
+{% if perms.products.change_product %}
+<li class="edit"><a title="{% trans 'Edit' %}" href="{% url product_edit object.pk %}">{% trans 'Edit' %}</a></li>
+{% endif %}
+{% if perms.products.delete_product %}
+<li class="delete"><a title="{% trans 'Delete' %}" href="{% url product_delete object.pk %}">{% trans 'Delete' %}</a></li>
+{% endif %}
+{% if perms.products.change_product %}
+<li class="all"><a title="{% trans 'All' %}" href="{% url product_list %}">{% trans 'All' %}</a></li>
+{% endif %}
+{% if perms.products.change_product %}
+{% if user not in object.stream.followers.all %}
+<li class="follow"><a title="{% trans 'Follow' %}" href="{% url stream_follow object.stream request.path %}">{% trans 'Follow' %}</a></li>
+{% else %}
+<li class="leave"><a title="{% trans 'Leave' %}" href="{% url stream_leave object.stream request.path %}">{% trans 'Leave' %}</a></li>
+{% endif %}
+{% endif %}
 {% endblock %}
 
-{% block main %}
-<div class="actions">
-    <ul>
-        {% if perms.products.add_product %}
-        <li class="add"><a title="{% trans 'Add' %}" href="{% url product_add %}">{% trans 'Add' %}</a></li>
-        {% endif %}
-        {% if perms.products.change_product %}
-        <li class="edit"><a title="{% trans 'Edit' %}" href="{% url product_edit object.pk %}">{% trans 'Edit' %}</a></li>
-        {% endif %}
-        {% if perms.products.delete_product %}
-        <li class="delete"><a title="{% trans 'Delete' %}" href="{% url product_delete object.pk %}">{% trans 'Delete' %}</a></li>
-        {% endif %}
-        {% if perms.products.change_product %}
-        <li class="all"><a title="{% trans 'All' %}" href="{% url product_list %}">{% trans 'All' %}</a></li>
-        {% endif %}
-        {% if perms.products.change_product %}
-        {% if user not in object.stream.followers.all %}
-        <li class="follow"><a title="{% trans 'Follow' %}" href="{% url stream_follow object.stream request.path %}">{% trans 'Follow' %}</a></li>
-        {% else %}
-        <li class="leave"><a title="{% trans 'Leave' %}" href="{% url stream_leave object.stream request.path %}">{% trans 'Leave' %}</a></li>
-        {% endif %}
-        {% endif %}
-    </ul>
+{% block objectmenu %}{% menu "product_menu" %}{% endblock %}
+
+{% block section %}
+<div class="details">
+    <table class="properties">
+        {% property_table object "['ean13', ['uom', 'uos'], ['uom_to_uos', 'weight'], ['is_consumable', 'is_service'], ['sales_price', 'sales_currency'], ['max_sales_discount', 'sales_tax'], 'description', 'categories', 'tags']" %}
+    </table>
 </div>
-{% objects_from object %}
-{% with objects as object_list %}
-{% include 'elements/navigator.html' %}
+{% with dashboard=object.dashboard %}
+{% include "elements/dashboard.html" %}
 {% endwith %}
-<div class="sections">   
-    <div class="menu">
-        {% menu "product_menu" %}
-    </div>
-    <div class="section">
-        {% block section %}
-        <div class="details">
-            <table class="properties">
-                {% property_table object "['ean13', ['uom', 'uos'], ['uom_to_uos', 'weight'], ['is_consumable', 'is_service'], ['sales_price', 'sales_currency'], ['max_sales_discount', 'sales_tax'], 'description', 'categories', 'tags']" %}
-            </table>
-        </div>
-        {% with dashboard=object.dashboard %}
-        {% include "elements/dashboard.html" %}
-        {% endwith %}
-        {% include "elements/comments.html" %}
-        {% endblock %}
-    </div>
-</div>
+{% include "elements/comments.html" %}
 {% endblock %}
