--- a/themes/default/templates/todo/task_detail.html
+++ b/themes/default/templates/todo/task_detail.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_detail.html" %}
 
 {% load i18n %}
 {% load breadcrumbs %}
@@ -13,41 +13,33 @@
     {% add_crumb object %}
 {% endblock %}
 
-{% block title %}
-<div class="title">
-    <h1>{{ object }}</h1>
-</div>
+{% block objectactions %}
+{% if perms.todo.add_task %}
+<li class="add"><a title="{% trans 'Add' %}" href="{% url task_add %}">{% trans 'Add' %}</a></li>
+{% endif %}
+{% if perms.todo.change_task %}
+<li class="edit"><a title="{% trans 'Edit' %}" href="{% url task_edit object.pk %}">{% trans 'Edit' %}</a></li>
+{% endif %}
+{% if perms.todo.delete_task %}
+<li class="delete"><a title="{% trans 'Delete' %}" href="{% url task_delete object.pk %}">{% trans 'Delete' %}</a></li>
+{% endif %}
+{% if perms.todo.change_task %}
+{% if object.start %}
+<li class="all"><a title="{% trans 'All' %}" href="{% url task_list %}">{% trans 'All' %}</a></li>
+{% else %}
+<li class="all"><a title="{% trans 'All' %}" href="{% url unplanned_task_list %}">{% trans 'All' %}</a></li>
+{% endif %}
+{% endif %}
+{% if perms.todo.change_task %}
+{% if not object.closed %}
+<li class="close"><a title="{% trans 'Close' %}" href="{% url task_close object.pk %}">{% trans 'Close' %}</a></li>
+{% else %}
+<li class="reopen"><a title="{% trans 'Reopen' %}" href="{% url task_reopen object.pk %}">{% trans 'Reopen' %}</a></li>
+{% endif %}
+{% endif %}
 {% endblock %}
 
-{% block main %}
-<div class="actions">
-    <ul>
-        {% if perms.todo.add_task %}
-        <li class="add"><a title="{% trans 'Add' %}" href="{% url task_add %}">{% trans 'Add' %}</a></li>
-        {% endif %}
-        {% if perms.todo.change_task %}
-        <li class="edit"><a title="{% trans 'Edit' %}" href="{% url task_edit object.pk %}">{% trans 'Edit' %}</a></li>
-        {% endif %}
-        {% if perms.todo.delete_task %}
-        <li class="delete"><a title="{% trans 'Delete' %}" href="{% url task_delete object.pk %}">{% trans 'Delete' %}</a></li>
-        {% endif %}
-        {% if perms.todo.change_task %}
-        {% if object.start %}
-        <li class="all"><a title="{% trans 'All' %}" href="{% url task_list %}">{% trans 'All' %}</a></li>
-        {% else %}
-        <li class="all"><a title="{% trans 'All' %}" href="{% url unplanned_task_list %}">{% trans 'All' %}</a></li>
-        {% endif %}
-        {% endif %}
-        {% if perms.todo.change_task %}
-        {% if not object.closed %}
-        <li class="close"><a title="{% trans 'Close' %}" href="{% url task_close object.pk %}">{% trans 'Close' %}</a></li>
-        {% else %}
-        <li class="reopen"><a title="{% trans 'Reopen' %}" href="{% url task_reopen object.pk %}">{% trans 'Reopen' %}</a></li>
-        {% endif %}
-        {% endif %}
-    </ul>
-</div>
-{% include 'elements/navigator.html' %}
+{% block sections %}
 <div class="details">
     <table class="properties">
         {% property_table object "[['created', 'closed'], ['start', 'end'], 'description', 'working_hours', 'categories', 'tags']" %}
