Making all creating/updating/deleting messages uniform.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@817 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/knowledge/activities/answer-created.html
+++ b/themes/default/templates/knowledge/activities/answer-created.html
@@ -2,7 +2,7 @@
 
 {% with author|capfirst as author %}
 {% blocktrans %}
-<p><a href="{{ author_link }}">{{ author }}</a> has answered to the {{ class }} <a href="{{ link }}">{{ name }}</a>:</p>
+<p><a href="{{ author_link }}">{{ author }}</a> answered to the {{ class }} <a href="{{ link }}">{{ name }}</a>:</p>
 <blockquote>{{ answer }}</blockquote>
 {% endblocktrans %}
 {% endwith %}
