--- a/themes/default/templates/knowledge/activities/answer-deleted.html
+++ b/themes/default/templates/knowledge/activities/answer-deleted.html
@@ -1,5 +1,5 @@
 {% load i18n %}
 
 {% blocktrans %}
-<p>An answer of <a href="{{ author_link }}">{{ author }}</a> has been deleted from {{ class }} <a href="{{ link }}">{{ name }}</a>.</p>
+<p>An answer of <a href="{{ author_link }}">{{ author }}</a> was deleted from {{ class }} <a href="{{ link }}">{{ name }}</a>.</p>
 {% endblocktrans %}
