--- a/themes/default/templates/notifications/activities/comment-created.html
+++ b/themes/default/templates/notifications/activities/comment-created.html
@@ -2,7 +2,7 @@
 
 {% with author|capfirst as author %}
 {% blocktrans %}
-<p><a href="{{ author_link }}">{{ author }}</a> has posted a comment to {{ class }} <a href="{{ link }}">{{ name }}</a>:</p>
+<p><a href="{{ author_link }}">{{ author }}</a> posted a comment to {{ class }} <a href="{{ link }}">{{ name }}</a>:</p>
 <blockquote>{{ comment }}</blockquote>
 {% endblocktrans %}
 {% endwith %}
