--- a/themes/default/templates/notifications/activities/comment-deleted.html
+++ b/themes/default/templates/notifications/activities/comment-deleted.html
@@ -1,5 +1,5 @@
 {% load i18n %}
 
 {% blocktrans %}
-<p>A comment has been deleted from {{ class }} <a href="{{ link }}">{{ name }}</a> by <a href="{{ author_link }}">{{ author }}</a>.</p>
+<p>A comment was deleted from {{ class }} <a href="{{ link }}">{{ name }}</a> by <a href="{{ author_link }}">{{ author }}</a>.</p>
 {% endblocktrans %}
