- Renamed all the "Dahsboard" links to "Details". - Added "Timeline" link to the "Contact" model.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@819 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/calendar/base.html
+++ b/themes/default/templates/calendar/base.html
@@ -28,7 +28,7 @@
 </div>
 <div class="sections">   
     <div class="menu">
-        {% menu "calendar_menu" %}
+        {% menu "calendar-menu" %}
     </div>
     <div class="section">
         {% block section %}
