--- a/themes/default/templates/calendar/event_detail.html
+++ b/themes/default/templates/calendar/event_detail.html
@@ -42,7 +42,7 @@
 
 {% block objectmenu %}{% menu "event_menu" %}{% endblock %}
 
-{% block section %}
+{% block sections %}
 <div class="details">
     <table class="properties">
         {% property_table object "[['author', 'created'], ['start', 'end'], 'status', 'location', 'description', 'attendees', 'categories', 'tags']" %}
