--- a/themes/default/templates/projects/milestone_detail.html
+++ b/themes/default/templates/projects/milestone_detail.html
@@ -44,7 +44,7 @@
 {% endif %}
 {% endblock %}
 
-{% block objectmenu %}{% menu "milestone_menu" %}{% endblock %}
+{% block objectmenu %}{% menu "milestone-menu" %}{% endblock %}
 
 {% block section %}
 <div class="details">
