--- a/themes/default/templates/projects/project_detail.html
+++ b/themes/default/templates/projects/project_detail.html
@@ -34,7 +34,7 @@
 {% endif %}
 {% endblock %}
 
-{% block objectmenu %}{% menu "project_menu" %}{% endblock %}
+{% block objectmenu %}{% menu "project-menu" %}{% endblock %}
 
 {% block section %}
 <div class="details">
