--- a/themes/default/templates/projects/ticket_detail.html
+++ b/themes/default/templates/projects/ticket_detail.html
@@ -43,7 +43,7 @@
 {% endif %}
 {% endblock %}
 
-{% block objectmenu %}{% menu "ticket_menu" %}{% endblock %}
+{% block objectmenu %}{% menu "ticket-menu" %}{% endblock %}
 
 {% block section %}
 <div class="details">
