Fixed action links.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@822 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/hr/expensevoucher_detail.html
+++ b/themes/default/templates/hr/expensevoucher_detail.html
@@ -16,10 +16,10 @@
 <li class="add"><a title="{% trans 'Add' %}" href="{% url expensevoucher_add %}">{% trans 'Add' %}</a></li>
 {% endif %}
 {% if perms.hr.change_expensevoucher %}
-<li class="edit"><a title="{% trans 'Edit' %}" href="{% url expensevoucher_edit object.pk %}">{% trans 'Edit' %}</a></li>
+<li class="edit"><a title="{% trans 'Edit' %}" href="{% url expensevoucher_edit object.content_object.pk %}">{% trans 'Edit' %}</a></li>
 {% endif %}
 {% if perms.hr.delete_expensevoucher %}
-<li class="delete"><a title="{% trans 'Delete' %}" href="{% url expensevoucher_delete object.pk %}">{% trans 'Delete' %}</a></li>
+<li class="delete"><a title="{% trans 'Delete' %}" href="{% url expensevoucher_delete object.content_object.pk %}">{% trans 'Delete' %}</a></li>
 {% endif %}
 {% if perms.hr.change_expensevoucher %}
 <li class="all"><a title="{% trans 'All' %}" href="{% url expensevoucher_list %}">{% trans 'All' %}</a></li>
