Added support for South.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@824 71535020-02ba-11df-897e-95fb7fca2173

--- a/settings/base.py.tmpl
+++ b/settings/base.py.tmpl
@@ -201,6 +201,8 @@ INSTALLED_APPS = (
     'django.contrib.markup',
     'django.contrib.redirects',
 
+    #'south',
+
     'prometeo.core',
     'prometeo.core.filebrowser',
     'prometeo.core.widgets',
