Fixed meta title.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@827 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/documents/document_edit.html
+++ b/themes/default/templates/documents/document_edit.html
@@ -4,7 +4,7 @@
 {% load details %}
 
 {% block meta_title %}
-{% model_name object.content_type.model as model %}
+{% model_name object.content_type.model_class as model %}
 {% if object.pk %}
 {% blocktrans %}Edit {{ model }}{% endblocktrans %}
 {% else %}
