Started revision of permission management.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@835 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/calendar/base.html
+++ b/themes/default/templates/calendar/base.html
@@ -15,13 +15,13 @@
 {% block main %}
 <div class="actions">
     <ul>
-        {% if perms.events.add_event %}
+        {% if perms.calendar.add_event %}
         <li class="add"><a title="{% trans 'Add' %}" href="{% url event_add %}">{% trans 'Add' %}</a></li>
         {% endif %}
-        {% if perms.events.add_event %}
+        {% if perms.calendar.add_event %}
         <li class="import"><a title="{% trans 'Import events from an .ics file' %}" href="{% url event_import %}">{% trans 'Import' %}</a></li>
         {% endif %}
-        {% if perms.events.change_event %}
+        {% if perms.calendar.view_calendar %}
         <li class="export"><a title="{% trans 'Export events as an .ics file' %}" href="{% url event_export_all %}">{% trans 'Export' %}</a></li>
         {% endif %}
     </ul>
