--- a/themes/default/templates/calendar/event_detail.html
+++ b/themes/default/templates/calendar/event_detail.html
@@ -13,25 +13,25 @@
 {% endblock %}
 
 {% block objectactions %}
-{% if perms.events.add_event %}
+{% if perms.calendar.add_event %}
 <li class="add"><a title="{% trans 'Add' %}" href="{% url event_add %}">{% trans 'Add' %}</a></li>
 {% endif %}
-{% if perms.events.change_event %}
+{% if object.pk in obj_perms.calendar.change_event %}
 <li class="edit"><a title="{% trans 'Edit' %}" href="{% url event_edit object.pk %}">{% trans 'Edit' %}</a></li>
 {% endif %}
-{% if perms.events.delete_event %}
+{% if object.pk in obj_perms.calendar.delete_event %}
 <li class="delete"><a title="{% trans 'Delete' %}" href="{% url event_delete object.pk %}">{% trans 'Delete' %}</a></li>
 {% endif %}
-{% if perms.events.change_event %}
+{% if perms.calendar.view_calendar %}
 <li class="all"><a title="{% trans 'All' %}" href="{% url event_list %}">{% trans 'All' %}</a></li>
 {% endif %}
-{% if perms.events.add_event %}
+{% if perms.calendar.add_event %}
 <li class="import"><a title="{% trans 'Import events from an .ics file' %}" href="{% url event_import %}">{% trans 'Import' %}</a></li>
 {% endif %}
-{% if perms.events.change_event %}
+{% if object.pk in obj_perms.calendar.view_event %}
 <li class="export"><a title="{% trans 'Export event to an .ics file' %}" href="{% url event_export object.pk %}">{% trans 'Export' %}</a></li>
 {% endif %}
-{% if perms.events.change_event %}
+{% if object.pk in obj_perms.calendar.view_event %}
 {% if user not in object.stream.followers.all %}
 <li class="follow"><a title="{% trans 'Follow' %}" href="{% url stream_follow object.stream request.path %}">{% trans 'Follow' %}</a></li>
 {% else %}
