Improved permission management.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@839 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/elements/dashboard.html
+++ b/themes/default/templates/elements/dashboard.html
@@ -4,7 +4,9 @@
 <div class="dashboard">
     <div class="actions">
         <ul>
+            {% if perms.widgets.add_widget %}
             <li class="add"><a title="{% trans 'Add widget' %}" href="{% url widget_add dashboard.slug %}">{% trans 'Add' %}</a></li>
+            {% endif %}
         </ul>
     </div>
     <div class="region">
