--- a/themes/default/templates/elements/bookmarks.html
+++ b/themes/default/templates/elements/bookmarks.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 {% load menu %}
 
-{% if user.is_authenticated %}
+{% if perms.menus.add_link %}
 <span class="add"><a title="Bookmark this page." href="{% url bookmark_add user.username %}">{% trans '+' %}</a></span>
 {% menu user.get_profile.bookmarks.slug %}
 {% endif %}
