Added the "django.contrib.staticfiles" app which solves the problem with admin static files.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@841 71535020-02ba-11df-897e-95fb7fca2173

--- a/settings/base.py.tmpl
+++ b/settings/base.py.tmpl
@@ -200,6 +200,7 @@ INSTALLED_APPS = (
     'django.contrib.comments',
     'django.contrib.markup',
     'django.contrib.redirects',
+    'django.contrib.staticfiles',
 
     #'south',
 
