It's now easier to share style between admin and front-end UIs.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@843 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -553,7 +553,7 @@ form .submit input:hover, .submit a:hover, .cancel a:hover {
  * Layout.
  */
 
-#header, #logo, #nav, #breadcrumbs, #content, #footer {
+#header, #branding, #nav, #breadcrumbs, #content, #footer {
     clear: both;
     float: left;
     padding: 0;
@@ -567,14 +567,14 @@ form .submit input:hover, .submit a:hover, .cancel a:hover {
     border-top: 1px solid #ec7672;
 }
 
-#logo {
+#branding {
     height: 60px;
     background: url(images/logo.png) no-repeat 20px center;
     border-bottom: 1px solid #1f1f1f;
     color: #fff;
 }
 
-#logo h1, #logo h2 { display: none; }
+#branding h1, #branding h2 { display: none; }
 
 #nav {
     position: absolute;
