--- a/themes/default/templates/base.html
+++ b/themes/default/templates/base.html
@@ -28,10 +28,10 @@
 </head>
 
 <body>
-    <div id="wrapper">
+    <div id="container">
         <div id="header">
-            <div id="logo">
-                <h1 id="site-title">Prometeo</h1>
+            <div id="branding">
+                <h1 id="site-name">Prometeo</h1>
                 <h2 id="site-tagline">Free your business</h2>
             </div>
 
