--- a/themes/default/templates/menus/menu.html
+++ b/themes/default/templates/menus/menu.html
@@ -3,7 +3,8 @@
 
 <ul class="menu">
 {% for link in links %}
-    {% if link.authorized %}
+    {% if link.authorized and link.url %}
+    {% block menulink %}
     <li{% matchlink link request.get_full_path %} id="{{ link.slug|escape }}-link">
         {% with link.description|default:link.title|striptags as link_title %}
         <a href="{{ link.url|escape }}" title="{% trans link_title %}">
@@ -14,6 +15,7 @@
         {% menu link.submenu.slug %}
         {% endif %}
     </li>
+    {% endblock %}
     {% endif %}
 {% endfor %}
 </ul>
