--- a/themes/default/templates/menus/menu_disabled.html
+++ b/themes/default/templates/menus/menu_disabled.html
@@ -1,5 +1,8 @@
 {% extends "menus/menu.html" %}
 
+{% load i18n %}
+{% load menu %}
+
 {% block menulink %}
 <li{% matchlink link request.get_full_path %} id="{{ link.slug|escape }}-link">
     <span>{% trans link.title|escape %}</span>
