Started support for mobile screen.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@850 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/base.html
+++ b/themes/default/templates/base.html
@@ -20,6 +20,8 @@
     
     <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css" type="text/css" media="all"/>
 
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/mobile.css" type="text/css" media="handheld"/>
+
     {% block extrahead %}
     {% if form %}
     {{ form.media }}
