Improved support for mobile.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@852 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/mobile.css
+++ b/themes/default/static/css/mobile.css
@@ -1,5 +1,14 @@
 body {
-    width: 800px;
     min-width: 800px;
     -webkit-text-size-adjust: none;
+}
+
+#header, #branding, #nav, #breadcrumbs, #content, #footer {
+    float: none;
+    min-width: 800px;
+}
+
+#sidebar, #main {
+    float: none;
+    width: 100%;
 }
