Improved support for mobile.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@853 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/mobile.css
+++ b/themes/default/static/css/mobile.css
@@ -1,14 +1,18 @@
 body {
+    width: 800px;
     min-width: 800px;
     -webkit-text-size-adjust: none;
 }
 
 #header, #branding, #nav, #breadcrumbs, #content, #footer {
     float: none;
+    width: 800px;
     min-width: 800px;
 }
 
+#content { background-image: none; }
+
 #sidebar, #main {
     float: none;
-    width: 100%;
+    width: 760px;
 }
