Improved support for mobile.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@855 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/static/css/style.css
+++ b/themes/default/static/css/style.css
@@ -1360,7 +1360,7 @@ form .submit input:hover, .submit a:hover, .cancel a:hover {
 #footer {
     height: 200px;
     border-top: 1px solid #111;
-    background: url(images/footer.jpg) repeat-x top;
+    background: #1f1f1f url(images/footer.jpg) repeat-x top;
     color: #fff;
 }
 
