--- a/themes/default/templates/base.html
+++ b/themes/default/templates/base.html
@@ -8,6 +8,8 @@
 
 <head profile="http://www.w3.org/2005/10/profile">
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0"/>
+
     <title>{% block meta_title %}Prometeo{% endblock %}</title>
 
     <link rel="icon" type="image/png" href="{{ STATIC_URL }}css/images/favicon.png" />
