Added ID to menu rendering.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@857 71535020-02ba-11df-897e-95fb7fca2173

--- a/themes/default/templates/menus/menu.html
+++ b/themes/default/templates/menus/menu.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 {% load menu %}
 
-<ul class="menu">
+<ul id="{{ slug }}-menu" class="menu">
 {% for link in links %}
     {% if link.authorized and link.url %}
     {% block menulink %}
